--- a/.github/workflows/create_pr.yml
+++ b/.github/workflows/create_pr.yml
@@ -2,3 +2,22 @@ name: Create PR for Branch
 
 on: push
 
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Install Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.8'
+        architecture: 'x64'
+    - name: Install Dependencies
+      run: pip install PyGithub awesome-slugify
+    - name: Exec Python Issue Assign
+      env: 
+          milestone: ${{ github.event.issue.milestone.title }} 
+          issue: ${{ github.event.issue.title }}
+          issue_num: ${{ github.event.issue.number }}
+          repository: ${{ github.repository }}
+      run: python create_pr.py ${{ secrets.GITHUB_TOKEN }} 
