--- a/.github/workflows/create_pr.yml
+++ b/.github/workflows/create_pr.yml
@@ -7,6 +7,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+    - name: Dump GitHub context
+        env:
+          GITHUB_CONTEXT: ${{ toJson(github) }}
+        run: echo "$GITHUB_CONTEXT"   
     - name: Install Python
       uses: actions/setup-python@v2
       with:
