--- a/.github/workflows/create_pr.yml
+++ b/.github/workflows/create_pr.yml
@@ -17,11 +17,10 @@ jobs:
         python-version: '3.8'
         architecture: 'x64'
     - name: Install Dependencies
-      run: pip install PyGithub awesome-slugify
+      run: pip install PyGithub
     - name: Exec Python Issue Assign
       env: 
-          milestone: ${{ github.event.issue.milestone.title }} 
-          issue: ${{ github.event.issue.title }}
-          issue_num: ${{ github.event.issue.number }}
+          ref: ${{ github.ref }}
+          user: ${{ github.event.head_commit.username }}
           repository: ${{ github.repository }}
       run: python create_pr.py ${{ secrets.GITHUB_TOKEN }} 
